crates/typestate-pipeline/tests/ui/transitions_deferred_on_sync.stderr
error: `deferred` is only valid on `async fn` transitions
  --> tests/ui/transitions_deferred_on_sync.rs:12:28
   |
12 |     #[transition(into = B, deferred = true)]
   |                            ^^^^^^^^
